Added error message for when user has no internet.  Renamed button to be more appropriate

--- a/ENGIE_App/views/RecentlySubmitted.xaml
+++ b/ENGIE_App/views/RecentlySubmitted.xaml
@@ -44,7 +44,7 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
-            <Button Text="Resend All" Clicked="resend"></Button>
+            <Button Text="Resend failed forms" Clicked="resend" AutomationId="ResendFailedForms"></Button>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
